k8s_vagrant/services/mainsite_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mainsite
  labels:
    app: mainsite
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mainsite
  template:
    metadata:
      labels:
        app: mainsite
    spec:
      containers:
      - name: mainsite
        image: phulerock/services_web:1.0
        ports:
        - containerPort: 80
